k8s/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-internal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      lb.szp.io/pool: default
  listeners:
    # TODO: redirect HTTP to HTTPS
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.szp.io"
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-internal-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - name: k8s-internal
  hostnames:
    - hubble.k8s.szp.io
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8s-internal-gateway
specs:
  - description: "Allow traffic from gateway to hubble-ui"
    endpointSelector:
      matchLabels:
        k8s-app: hubble-ui
    ingress:
      - fromEntities:
          - ingress
