k8s/cilium/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: gateway
      sectionName: https
  hostnames:
    - hubble.k8s.szp.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
specs:
  - description: "Allow traffic from gateway to hubble-ui"
    endpointSelector:
      matchLabels:
        k8s-app: hubble-ui
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: envoy-gateway-system
              k8s:app.kubernetes.io/name: envoy
              k8s:app.kubernetes.io/component: proxy
              k8s:gateway.envoyproxy.io/owning-gateway-name: default
              k8s:gateway.envoyproxy.io/owning-gateway-namespace: gateway
